--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
               <li><a href="home.html">الصفحة الرئيسية</a></li>
               <li><a href="Appliances.html">المنتجات</a></li>
               <li><a href="aboutus.html">من نحن</a></li>
-              <li><a href="https://svusudutent.github.io/StoreAlasli/home.html" class="button1" target="_blank">الموقع الالكتروني </a></li>
+              <li><a href="https://svu-student.github.io/StoreAlasli/home.html" class="button1" target="_blank">الموقع الالكتروني </a></li>
           </ul>
           </nav>
     </header>
