--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
               <li><a href="home.html">الصفحة الرئيسية</a></li>
               <li><a href="Appliances.html">المنتجات</a></li>
               <li><a href="aboutus.html">من نحن</a></li>
-              <li><a href="https://svusudutent.github.io/StoreAlasli/home.html" target="_blank">الموقع الالكتروني </a></li>
+              <li><a href="https://svu-student.github.io/StoreAlasli/home.html" target="_blank">الموقع الالكتروني </a></li>
           </ul>
           </nav>     
 
